<resources>

    <!-- CONFIGURAÇÃO DE INFORMAÇÕES DO APLICATIVO -->
    <string name="Str_NomeAplicativo">Coopa - Recebimento</string>
    <string name="Str_NomeEmpresa">Coopa</string>
    <string name="Str_NomeModuloApp">Recebimento</string>
    <string name="Str_VersaoApp">v1.0.0</string>

    <!-- CONFIGURAÇÃO DO TEXTOS DOS CAMPOS DE CARTÃO DE NOTA FISCAL -->
    <string name="Str_CrdVw_NFe_NotaFiscal">Nota Fiscal</string>
    <string name="Str_CrdVw_NFe_Produtos">Produtos</string>
    <string name="Str_CrdVw_NFe_Fornecedor">Fornecedor</string>
    <string name="Str_CrdVw_NFe_DataDeRecebimento">Data de Recebimento</string>
    <string name="Str_CrdVw_NFe_NomeConferente">Nome Conferente</string>

    <!-- CONFIGURAÇÃO DO TEXTOS DOS CAMPOS DO CARTÃO DE ITEM -->
    <string name="Str_CrdVw_Item_NumeroItem">Item</string>
    <string name="Str_CrdVw_Item_Material">Material</string>
    <string name="Str_CrdVw_Item_TextoBreve">Texto Breve</string>
    <string name="Str_CrdVw_Item_Umb">UMB</string>
    <string name="Str_CrdVw_Item_CodigoEan">Código EAN</string>
    <string name="Str_CrdVw_Item_Quantidade">Quantidade</string>

    <!-- CONFIGURAÇÃO DO TEXTOS DOS CAMPOS DO CARTÃO DE FORNECEDOR -->
    <string name="Str_CrdVw_Fornecedor_CodigoBp">BP</string>
    <string name="Str_CrdVw_Fornecedor_CNPJ">CNPJ</string>
    <string name="Str_CrdVw_Fornecedor_CPF">CPF</string>
    <string name="Str_CrdVw_Fornecedor_RazaoSocial">Razão Social</string>

    <!-- CONFIGURAÇÃO DO TEXTOS DOS CAMPOS DO CARTÃO DE FORNECEDOR -->
    <string name="Str_CrdVw_Material_CodigoMaterial">Material</string>
    <string name="Str_CrdVw_Material_UnidadeDeMedida">Unidade de Medida</string>
    <string name="Str_CrdVw_Material_TextoBreveMaterial">Texto Breve Material</string>
    <string name="Str_CrdVw_Material_CodigoEan">Código Ean</string>

    <!-- CONFIGURAÇÃO DO TEXTOS DOS ELEMENTOS DA TELA DE LOGON -->
    <string name="Str_Act01_AppCmpBtn_ExecutarLogon">Conectar-se</string>

    <!-- CONFIGURAÇÃO DO TEXTOS DOS ELEMENTOS DA TELA DE LOGIN -->
    <string name="Str_Frg00_TxtVw_Login">Login</string>
    <string name="Str_Frg00_TxtVw_EsqueceuSenha">Esqueceu sua senha?</string>

    <!-- CONFIGURAÇÃO DO TEXTOS DOS ELEMENTOS DA TELA DE REDEFINIR SENHA -->
    <string name="Str_Frg01_TxtVw_RedefinirSenha">Redefinir Senha</string>
    <string name="Str_Frg01_TxtVw_LembrouSenha">Lembrou sua senha?</string>

</resources>