<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="120dp"
    android:background="@color/verde_500">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/svg_simbolo_logoselo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ConsLyt_MenuLateral_NomeEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Dms_Espacamento_Padrao"
        android:text="@string/Str_NomeEmpresa"
        android:textColor="@color/verde_800"
        android:textSize="@dimen/Dms_TamanhoTexto_Nivel_TituloSecao"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ConsLyt_MenuLateral_ModuloApp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ConsLyt_MenuLateral_VersaoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Str_VersaoApp"
        android:textColor="@color/verde_800"
        android:textSize="@dimen/Dms_TamanhoTexto_Nivel_DetalheAdicional"
        android:textStyle="bold"
        android:layout_margin="@dimen/Dms_Espacamento_Padrao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ConsLyt_MenuLateral_ModuloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Str_NomeModuloApp"
        android:textColor="@color/branco_1000"
        android:textSize="@dimen/Dms_TamanhoTexto_Nivel_Informativo"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/Dms_Espacamento_Padrao"
        android:layout_marginStart="@dimen/Dms_Espacamento_Padrao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>