<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CrdVw_Item_Notificado"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/Dms_Espacamento_Padrao"
    android:layout_marginTop="@dimen/Dms_Espacamento_Padrao"
    android:layout_marginEnd="@dimen/Dms_Espacamento_Padrao"
    android:elevation="@dimen/Dms_Espacamento_Pequeno">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CrdVw_Item_ConstLyt_DadosItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_conlyt_crdvw_corpo_cinza"
        android:paddingBottom="@dimen/Dms_Espacamento_medio">

        <View
            android:id="@+id/CrdVw_Item_Vw_Cabecalho"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bg_conlyt_crdvw_cabecalho_vermelho"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Dms_Espacamento_Padrao"
            android:text="@string/Str_CrdVw_Item_NumeroItem"
            android:textColor="@color/branco_1000"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_DetalheAdicional"
            app:layout_constraintBottom_toBottomOf="@+id/CrdVw_Item_Vw_Cabecalho"
            app:layout_constraintStart_toStartOf="@+id/CrdVw_Item_Vw_Cabecalho"
            app:layout_constraintTop_toTopOf="@+id/CrdVw_Item_Vw_Cabecalho" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_NumeroItem"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Dms_Espacamento_medio"
            android:text="**"
            android:textColor="@color/branco_1000"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_Informativo"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/CrdVw_Item_Vw_Cabecalho"
            app:layout_constraintStart_toEndOf="@+id/CrdVw_Item_TxtVw_Item"
            app:layout_constraintTop_toTopOf="@+id/CrdVw_Item_Vw_Cabecalho" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_Material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Str_CrdVw_Item_Material"
            android:textColor="@color/branco_1000"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_DetalheAdicional"
            app:layout_constraintBottom_toBottomOf="@+id/CrdVw_Item_Vw_Cabecalho"
            app:layout_constraintStart_toEndOf="@+id/CrdVw_Item_TxtVw_NumeroItem"
            app:layout_constraintTop_toTopOf="@+id/CrdVw_Item_Vw_Cabecalho" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_CodigoMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Dms_Espacamento_medio"
            android:text="**"
            android:textColor="@color/branco_1000"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_Informativo"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/CrdVw_Item_Vw_Cabecalho"
            app:layout_constraintStart_toEndOf="@+id/CrdVw_Item_TxtVw_Material"
            app:layout_constraintTop_toTopOf="@+id/CrdVw_Item_Vw_Cabecalho" />

        <ImageView
            android:id="@+id/CrdVw_Item_ImgVw_StatusItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/Dms_Espacamento_medio"
            android:src="@drawable/icn_item_notificado"
            app:layout_constraintBottom_toBottomOf="@+id/CrdVw_Item_Vw_Cabecalho"
            app:layout_constraintEnd_toEndOf="@+id/CrdVw_Item_Vw_Cabecalho"
            app:layout_constraintTop_toTopOf="@id/CrdVw_Item_Vw_Cabecalho"
            app:tint="@color/amarelo_500" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_TextoBreve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Dms_Espacamento_medio"
            android:text="@string/Str_CrdVw_Item_TextoBreve"
            android:textColor="@color/cinza_500"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_DetalheAdicional"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/CrdVw_Item_TxtVw_Item"
            app:layout_constraintTop_toBottomOf="@+id/CrdVw_Item_Vw_Cabecalho" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_TextoBreveMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Dms_Espacamento_Padrao"
            android:layout_marginEnd="@dimen/Dms_Espacamento_ExtraGrande"
            android:text="**"
            android:textColor="@color/cinza_900"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_Informativo"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/CrdVw_Item_TxtVw_Item"
            app:layout_constraintTop_toBottomOf="@+id/CrdVw_Item_TxtVw_TextoBreve" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_Umb"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Str_CrdVw_Item_Umb"
            android:textColor="@color/cinza_500"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_DetalheAdicional"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/Dms_Espacamento_Pequeno"
            app:layout_constraintStart_toStartOf="@+id/CrdVw_Item_TxtVw_Item"
            app:layout_constraintTop_toBottomOf="@+id/CrdVw_Item_TxtVw_TextoBreveMaterial" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_UmbMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="**"
            android:textColor="@color/cinza_900"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_Informativo"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/CrdVw_Item_TxtVw_Umb"
            app:layout_constraintTop_toBottomOf="@+id/CrdVw_Item_TxtVw_Umb" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_CodigoEan"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/Str_CrdVw_Item_CodigoEan"
            android:textColor="@color/cinza_500"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_DetalheAdicional"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/CrdVw_Item_TxtVw_Umb"
            app:layout_constraintTop_toTopOf="@+id/CrdVw_Item_TxtVw_Umb" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_CodigoEanColetado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="**"
            android:textColor="@color/cinza_900"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_Informativo"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/CrdVw_Item_TxtVw_Umb"
            app:layout_constraintTop_toBottomOf="@+id/CrdVw_Item_TxtVw_CodigoEan" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_Quantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Str_CrdVw_Item_Quantidade"
            android:textColor="@color/cinza_500"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_DetalheAdicional"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/CrdVw_Item_TxtVw_CodigoEan"
            app:layout_constraintTop_toTopOf="@+id/CrdVw_Item_TxtVw_Umb" />

        <TextView
            android:id="@+id/CrdVw_Item_TxtVw_QuantidadeColetada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="**"
            android:textColor="@color/cinza_900"
            android:textSize="@dimen/Dms_TamanhoTexto_Nivel_Informativo"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/CrdVw_Item_TxtVw_CodigoEan"
            app:layout_constraintTop_toBottomOf="@+id/CrdVw_Item_TxtVw_Quantidade" />

        <ImageView
            android:id="@+id/CrdVw_Item_ImgVw_ModoEdicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/Dms_Espacamento_medio"
            android:src="@drawable/icn_corrigir_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/CrdVw_Item_Vw_Cabecalho"
            app:layout_constraintTop_toBottomOf="@+id/CrdVw_Item_Vw_Cabecalho"
            android:visibility="visible"
            app:tint="@color/vermelho_500" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>